// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`github: logs are reporting correctly 1`] = `
Array [
  Object {
    "event": Object {
      "name": "installation",
    },
    "level": "info",
    "message": "Onboarding maticzav.",
    "meta": Object {
      "periodEndsAt": "periodEndsAt",
      "plan": "PAID",
    },
  },
  Object {
    "event": Object {
      "name": "installation",
    },
    "level": "info",
    "message": "No existing repository for maticzav, start onboarding.",
  },
  Object {
    "event": Object {
      "name": "installation",
    },
    "level": "info",
    "message": "Bootstraping config repo for maticzav.",
  },
  Object {
    "event": Object {
      "name": "installation",
    },
    "level": "info",
    "message": "Onboarding complete for maticzav.",
  },
  Object {
    "event": Object {
      "name": "installation",
    },
    "level": "info",
    "message": "Onboarding maticzav.",
    "meta": Object {
      "periodEndsAt": "periodEndsAt",
      "plan": "PAID",
    },
  },
  Object {
    "event": Object {
      "name": "installation",
    },
    "level": "info",
    "message": "User has existing repository in maticzav-labelsync, performing sync.",
  },
  Object {
    "event": Object {
      "name": "installation",
    },
    "level": "info",
    "message": "Error in config, skipping sync.",
    "meta": Object {
      "error": " * \`repos\`: Required",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "event": Object {
      "name": "installation",
    },
    "level": "info",
    "message": "Opened issue undefined.",
  },
  Object {
    "event": Object {
      "name": "installation",
    },
    "level": "info",
    "message": "Onboarding maticzav.",
    "meta": Object {
      "periodEndsAt": "periodEndsAt",
      "plan": "PAID",
    },
  },
  Object {
    "event": Object {
      "name": "installation",
    },
    "level": "info",
    "message": "User has existing repository in maticzav-labelsync, performing sync.",
  },
  Object {
    "event": Object {
      "name": "installation",
    },
    "level": "info",
    "message": "Insufficient permissions, skipping sync.",
    "meta": Object {
      "access": "{\\"status\\":\\"Insufficient\\",\\"missing\\":[\\"UNCHANGED\\"],\\"accessible\\":[\\"changed\\",\\"unchanged\\",\\"other\\"]}",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "event": Object {
      "name": "installation",
    },
    "level": "error",
    "message": "Event resulted in error.",
    "meta": Object {
      "error": "request to https://api.github.com/repos/maticzav/maticzav-labelsync/issues failed, reason: Nock: No match for request {
  \\"method\\": \\"POST\\",
  \\"url\\": \\"https://api.github.com/repos/maticzav/maticzav-labelsync/issues\\",
  \\"headers\\": {
    \\"accept\\": [
      \\"application/vnd.github.v3+json\\"
    ],
    \\"user-agent\\": [
      \\"octokit.js/16.43.1 Node.js/14.9.0 (macOS; x64)\\"
    ],
    \\"authorization\\": [
      \\"token token\\"
    ],
    \\"content-type\\": [
      \\"application/json; charset=utf-8\\"
    ],
    \\"content-length\\": [
      \\"389\\"
    ],
    \\"accept-encoding\\": [
      \\"gzip,deflate\\"
    ],
    \\"connection\\": [
      \\"close\\"
    ]
  },
  \\"body\\": \\"{\\\\\\"title\\\\\\":\\\\\\"LabelSync - Insufficient permissions\\\\\\",\\\\\\"body\\\\\\":\\\\\\"# Insufficient permissions\\\\\\\\n\\\\\\\\nHi there,\\\\\\\\nThank you for installing LabelSync. We have noticed that your configuration stretches beyond repositories we can access. We assume that you forgot to allow access to certain repositories.\\\\\\\\n\\\\\\\\nPlease update your installation. \\\\\\\\n\\\\\\\\n_Missing repositories:_\\\\\\\\n * UNCHANGED\\\\\\\\n\\\\\\\\nBest,\\\\\\\\nLabelSync Team\\\\\\"}\\"
}",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "event": Object {
      "name": "installation",
    },
    "level": "info",
    "message": "Onboarding maticzav.",
    "meta": Object {
      "periodEndsAt": "periodEndsAt",
      "plan": "PAID",
    },
  },
  Object {
    "event": Object {
      "name": "installation",
    },
    "level": "info",
    "message": "User has existing repository in maticzav-labelsync, performing sync.",
  },
  Object {
    "event": Object {
      "name": "installation",
    },
    "level": "info",
    "message": "Insufficient permissions, skipping sync.",
    "meta": Object {
      "access": "{\\"status\\":\\"Insufficient\\",\\"missing\\":[\\"UNCHANGED\\"],\\"accessible\\":[\\"changed\\"]}",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "event": Object {
      "name": "installation",
    },
    "level": "info",
    "message": "Opened issue undefined.",
  },
  Object {
    "event": Object {
      "action": "push",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "push",
      "repo": Object {
        "name": "maticzav-labelsync",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "Configuration loaded.",
    "meta": Object {
      "config": "{\\"repos\\":{}}",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "event": Object {
      "action": "push",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "push",
      "repo": Object {
        "name": "maticzav-labelsync",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "Insufficient permissions: UNCHANGED",
    "meta": Object {
      "access": "{\\"status\\":\\"Insufficient\\",\\"missing\\":[\\"UNCHANGED\\"],\\"accessible\\":[\\"unchanged\\",\\"changed\\",\\"other\\"]}",
      "config": "{\\"repos\\":{}}",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "event": Object {
      "action": "push",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "push",
      "repo": Object {
        "name": "maticzav-labelsync",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "Commented on commit 0000000000000000000000000000000000000000.",
  },
  Object {
    "event": Object {
      "action": "push",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "push",
      "repo": Object {
        "name": "maticzav-labelsync",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "Error in config  * \`repos\`: Required",
    "meta": Object {
      "error": " * \`repos\`: Required",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "event": Object {
      "action": "push",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "push",
      "repo": Object {
        "name": "maticzav-labelsync",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "Commented on commit 0000000000000000000000000000000000000000.",
  },
  Object {
    "event": Object {
      "action": "push",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "push",
      "repo": Object {
        "name": "maticzav-labelsync",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "Configuration loaded.",
    "meta": Object {
      "config": "{\\"repos\\":{}}",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "event": Object {
      "action": "push",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "push",
      "repo": Object {
        "name": "maticzav-labelsync",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "Insufficient permissions: UNCHANGED",
    "meta": Object {
      "access": "{\\"status\\":\\"Insufficient\\",\\"missing\\":[\\"UNCHANGED\\"],\\"accessible\\":[\\"changed\\"]}",
      "config": "{\\"repos\\":{}}",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "event": Object {
      "action": "push",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "push",
      "repo": Object {
        "name": "maticzav-labelsync",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "Commented on commit 0000000000000000000000000000000000000000.",
  },
  Object {
    "event": Object {
      "action": "opened",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "pull_request",
      "repo": Object {
        "name": "maticzav-labelsync",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "PullRequest action: opened",
  },
  Object {
    "event": Object {
      "action": "opened",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "pull_request",
      "repo": Object {
        "name": "maticzav-labelsync",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "Configration loaded configuration on labels",
    "meta": Object {
      "config": "{\\"repos\\":{}}",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "event": Object {
      "action": "opened",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "pull_request",
      "repo": Object {
        "name": "maticzav-labelsync",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "Insufficient permissions",
  },
  Object {
    "event": Object {
      "action": "opened",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "pull_request",
      "repo": Object {
        "name": "maticzav-labelsync",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "Completed check 123",
  },
  Object {
    "event": Object {
      "action": "opened",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "pull_request",
      "repo": Object {
        "name": "maticzav-labelsync",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "PullRequest action: opened",
  },
  Object {
    "event": Object {
      "action": "opened",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "pull_request",
      "repo": Object {
        "name": "maticzav-labelsync",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "Configuration didn't change, skipping comment.",
    "meta": Object {
      "files": "README.md",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "event": Object {
      "action": "opened",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "pull_request",
      "repo": Object {
        "name": "maticzav-labelsync",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "PullRequest action: opened",
  },
  Object {
    "event": Object {
      "action": "opened",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "pull_request",
      "repo": Object {
        "name": "maticzav-labelsync",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "Configration loaded configuration on labels",
    "meta": Object {
      "config": "{\\"repos\\":{}}",
      "periodEndsAt": "periodEndsAt",
    },
  },
  Object {
    "event": Object {
      "action": "opened",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "pull_request",
      "repo": Object {
        "name": "maticzav-labelsync",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "Insufficient permissions",
  },
  Object {
    "event": Object {
      "action": "opened",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "pull_request",
      "repo": Object {
        "name": "maticzav-labelsync",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "Completed check 123",
  },
  Object {
    "event": Object {
      "action": "created",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "label.created",
      "repo": Object {
        "name": "changed",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "New label create in changed: \\":bug: Bugfix\\".",
  },
  Object {
    "event": Object {
      "action": "created",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "label.created",
      "repo": Object {
        "name": "changed",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "Removing \\":bug: Bugfix\\" from changed.",
  },
  Object {
    "event": Object {
      "action": "created",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "label.created",
      "repo": Object {
        "name": "changed",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "Removed label \\":bug: Bugfix\\" from changed.",
  },
  Object {
    "event": Object {
      "action": "created",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "label.created",
      "repo": Object {
        "name": "changed",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "New label create in changed: \\":bug: Bugfix\\".",
  },
  Object {
    "event": Object {
      "action": "created",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "label.created",
      "repo": Object {
        "name": "changed",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "Removing \\":bug: Bugfix\\" from changed.",
  },
  Object {
    "event": Object {
      "action": "created",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "label.created",
      "repo": Object {
        "name": "changed",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "Removed label \\":bug: Bugfix\\" from changed.",
  },
  Object {
    "event": Object {
      "action": "labeled",
      "context": Object {
        "user_id": 43337079,
      },
      "name": "issues.labeled",
      "repo": Object {
        "name": "changed",
      },
      "user": Object {
        "id": 43337079,
        "owner": "maticzav",
        "type": "Organization",
      },
    },
    "level": "debug",
    "message": "IssueLabeled payload and config",
    "payload": Object {
      "action": "labeled",
      "installation": Object {
        "id": 7501122,
        "node_id": "asd==",
      },
      "issue": Object {
        "assignee": null,
        "assignees": Array [],
        "author_association": "CONTRIBUTOR",
        "body": "",
        "closed_at": null,
        "comments": 0,
        "created_at": "2020-03-23T22:17:15Z",
        "id": 586553190,
        "labels": Array [],
        "locked": false,
        "milestone": null,
        "node_id": "MDU6SXNzdWU1ODY1NTMxOTA=",
        "number": 1,
        "state": "open",
        "title": "LabelSync - Invalid configuration",
        "updated_at": "2020-03-24T07:24:21Z",
        "user": Object {
          "avatar_url": "https://avatars0.githubusercontent.com/in/42297?v=4",
          "gravatar_id": "",
          "html_url": "https://github.com/apps/labelsync-manager",
          "id": 55896118,
          "login": "labelsync-manager",
          "node_id": "MDM6Qm90NTU4OTYxMTg=",
          "received_events_url": "https://api.github.com/users/labelsync-manager%5Bbot%5D/received_events",
          "site_admin": false,
          "type": "Bot",
          "url": "https://api.github.com/users/labelsync-manager%5Bbot%5D",
        },
      },
      "label": Object {
        "color": "0075ca",
        "default": true,
        "description": "Improvements or additions to documentation",
        "id": 1929933064,
        "name": "label/siblings",
        "node_id": "MDU6TGFiZWwxOTI5OTMzMDY0",
        "url": "https://api.github.com/repos/3-SemicolonClub/3-SemicolonClub-labelsync/labels/documentation",
      },
      "organization": Object {
        "avatar_url": "https://avatars0.githubusercontent.com/u/43337079?v=4",
        "description": "{ semi: true }",
        "id": 43337079,
        "login": "maticzav",
        "node_id": "MDEyOk9yZ2FuaXphdGlvbjQzMzM3MDc5",
        "public_members_url": "https://api.github.com/orgs/3-SemicolonClub/public_members{/member}",
        "url": "https://api.github.com/orgs/3-SemicolonClub",
      },
      "repository": Object {
        "archived": false,
        "clone_url": "https://github.com/3-SemicolonClub/3-SemicolonClub-labelsync.git",
        "created_at": "2020-03-23T22:17:05Z",
        "default_branch": "master",
        "deployments_url": "https://api.github.com/repos/3-SemicolonClub/3-SemicolonClub-labelsync/deployments",
        "description": "LabelSync configuration repository.",
        "disabled": false,
        "fork": false,
        "forks": 0,
        "forks_count": 0,
        "full_name": "maticzav/changed",
        "git_url": "git://github.com/3-SemicolonClub/3-SemicolonClub-labelsync.git",
        "has_downloads": true,
        "has_issues": true,
        "has_pages": false,
        "has_projects": true,
        "has_wiki": true,
        "homepage": null,
        "html_url": "https://github.com/3-SemicolonClub/3-SemicolonClub-labelsync",
        "id": 249556373,
        "language": null,
        "license": null,
        "mirror_url": null,
        "name": "changed",
        "node_id": "MDEwOlJlcG9zaXRvcnkyNDk1NTYzNzM=",
        "open_issues": 1,
        "open_issues_count": 1,
        "owner": Object {
          "avatar_url": "https://avatars0.githubusercontent.com/u/43337079?v=4",
          "gravatar_id": "",
          "html_url": "https://github.com/3-SemicolonClub",
          "id": 43337079,
          "login": "maticzav",
          "node_id": "MDEyOk9yZ2FuaXphdGlvbjQzMzM3MDc5",
          "received_events_url": "https://api.github.com/users/3-SemicolonClub/received_events",
          "site_admin": false,
          "type": "Organization",
          "url": "https://api.github.com/users/3-SemicolonClub",
        },
        "private": false,
        "pushed_at": "2020-03-23T22:17:13Z",
        "size": 2,
        "ssh_url": "git@github.com:3-SemicolonClub/3-SemicolonClub-labelsync.git",
        "stargazers_count": 0,
        "svn_url": "https://github.com/3-SemicolonClub/3-SemicolonClub-labelsync",
        "updated_at": "2020-03-23T22:17:15Z",
        "watchers": 0,
        "watchers_count": 0,
      },
      "sender": Object {
        "avatar_url": "https://avatars2.githubusercontent.com/u/3924224?v=4",
        "followers_url": "https://api.github.com/users/maticzav/followers",
        "gravatar_id": "",
        "html_url": "https://github.com/maticzav",
        "id": 3924224,
        "login": "maticzav",
        "node_id": "MDQ6VXNlcjM5MjQyMjQ=",
        "site_admin": false,
        "type": "User",
        "url": "https://api.github.com/users/maticzav",
      },
    },
    "sources": Object {
      "repos": Object {},
    },
  },
  Object {
    "event": Object {
      "action": "labeled",
      "context": Object {
        "user_id": 43337079,
      },
      "name": "issues.labeled",
      "repo": Object {
        "name": "changed",
      },
      "user": Object {
        "id": 43337079,
        "owner": "maticzav",
        "type": "Organization",
      },
    },
    "level": "info",
    "message": "Issue (1) labeled with \\"label/siblings\\".",
  },
  Object {
    "event": Object {
      "action": "labeled",
      "context": Object {
        "user_id": 43337079,
      },
      "name": "issues.labeled",
      "repo": Object {
        "name": "changed",
      },
      "user": Object {
        "id": 43337079,
        "owner": "maticzav",
        "type": "Organization",
      },
    },
    "level": "info",
    "message": "Unconfigured label \\"label/siblings\\", skipping.",
  },
  Object {
    "event": Object {
      "action": "labeled",
      "context": Object {
        "user_id": 43337079,
      },
      "name": "pull_request.labeled",
      "repo": Object {
        "name": "changed",
      },
      "user": Object {
        "id": 43337079,
        "owner": "maticzav",
        "type": "Organization",
      },
    },
    "level": "debug",
    "message": "PullRequestLabeled payload and config",
    "payload": Object {
      "action": "labeled",
      "installation": Object {
        "id": 7501122,
        "node_id": "asd==",
      },
      "label": Object {
        "color": "0075ca",
        "default": true,
        "description": "Improvements or additions to documentation",
        "id": 1929933064,
        "name": "label/siblings",
        "node_id": "MDU6TGFiZWwxOTI5OTMzMDY0",
        "url": "https://api.github.com/repos/3-SemicolonClub/3-SemicolonClub-labelsync/labels/documentation",
      },
      "organization": Object {
        "avatar_url": "https://avatars0.githubusercontent.com/u/43337079?v=4",
        "description": "{ semi: true }",
        "id": 43337079,
        "login": "maticzav",
        "node_id": "MDEyOk9yZ2FuaXphdGlvbjQzMzM3MDc5",
        "public_members_url": "https://api.github.com/orgs/3-SemicolonClub/public_members{/member}",
        "url": "https://api.github.com/orgs/3-SemicolonClub",
      },
      "pull_request": Object {
        "assignee": null,
        "assignees": Array [],
        "author_association": "CONTRIBUTOR",
        "body": "",
        "closed_at": null,
        "comments": 0,
        "created_at": "2020-03-23T22:17:15Z",
        "id": 586553190,
        "labels": Array [],
        "locked": false,
        "milestone": null,
        "node_id": "MDU6SXNzdWU1ODY1NTMxOTA=",
        "number": 1,
        "state": "open",
        "title": "LabelSync - Invalid configuration",
        "updated_at": "2020-03-24T07:24:21Z",
        "user": Object {
          "avatar_url": "https://avatars0.githubusercontent.com/in/42297?v=4",
          "gravatar_id": "",
          "html_url": "https://github.com/apps/labelsync-manager",
          "id": 55896118,
          "login": "labelsync-manager",
          "node_id": "MDM6Qm90NTU4OTYxMTg=",
          "received_events_url": "https://api.github.com/users/labelsync-manager%5Bbot%5D/received_events",
          "site_admin": false,
          "type": "Bot",
          "url": "https://api.github.com/users/labelsync-manager%5Bbot%5D",
        },
      },
      "repository": Object {
        "archived": false,
        "clone_url": "https://github.com/3-SemicolonClub/3-SemicolonClub-labelsync.git",
        "created_at": "2020-03-23T22:17:05Z",
        "default_branch": "master",
        "deployments_url": "https://api.github.com/repos/3-SemicolonClub/3-SemicolonClub-labelsync/deployments",
        "description": "LabelSync configuration repository.",
        "disabled": false,
        "fork": false,
        "forks": 0,
        "forks_count": 0,
        "full_name": "maticzav/changed",
        "git_url": "git://github.com/3-SemicolonClub/3-SemicolonClub-labelsync.git",
        "has_downloads": true,
        "has_issues": true,
        "has_pages": false,
        "has_projects": true,
        "has_wiki": true,
        "homepage": null,
        "html_url": "https://github.com/3-SemicolonClub/3-SemicolonClub-labelsync",
        "id": 249556373,
        "language": null,
        "license": null,
        "mirror_url": null,
        "name": "changed",
        "node_id": "MDEwOlJlcG9zaXRvcnkyNDk1NTYzNzM=",
        "open_issues": 1,
        "open_issues_count": 1,
        "owner": Object {
          "avatar_url": "https://avatars0.githubusercontent.com/u/43337079?v=4",
          "gravatar_id": "",
          "html_url": "https://github.com/3-SemicolonClub",
          "id": 43337079,
          "login": "maticzav",
          "node_id": "MDEyOk9yZ2FuaXphdGlvbjQzMzM3MDc5",
          "received_events_url": "https://api.github.com/users/3-SemicolonClub/received_events",
          "site_admin": false,
          "type": "Organization",
          "url": "https://api.github.com/users/3-SemicolonClub",
        },
        "private": false,
        "pushed_at": "2020-03-23T22:17:13Z",
        "size": 2,
        "ssh_url": "git@github.com:3-SemicolonClub/3-SemicolonClub-labelsync.git",
        "stargazers_count": 0,
        "svn_url": "https://github.com/3-SemicolonClub/3-SemicolonClub-labelsync",
        "updated_at": "2020-03-23T22:17:15Z",
        "watchers": 0,
        "watchers_count": 0,
      },
      "sender": Object {
        "avatar_url": "https://avatars2.githubusercontent.com/u/3924224?v=4",
        "followers_url": "https://api.github.com/users/maticzav/followers",
        "gravatar_id": "",
        "html_url": "https://github.com/maticzav",
        "id": 3924224,
        "login": "maticzav",
        "node_id": "MDQ6VXNlcjM5MjQyMjQ=",
        "site_admin": false,
        "type": "User",
        "url": "https://api.github.com/users/maticzav",
      },
    },
    "sources": Object {
      "repos": Object {},
    },
  },
  Object {
    "event": Object {
      "action": "labeled",
      "context": Object {
        "user_id": 43337079,
      },
      "name": "pull_request.labeled",
      "repo": Object {
        "name": "changed",
      },
      "user": Object {
        "id": 43337079,
        "owner": "maticzav",
        "type": "Organization",
      },
    },
    "level": "info",
    "message": "PullRequest (1) labeled with \\"label/siblings\\".",
  },
  Object {
    "event": Object {
      "action": "labeled",
      "context": Object {
        "user_id": 43337079,
      },
      "name": "pull_request.labeled",
      "repo": Object {
        "name": "changed",
      },
      "user": Object {
        "id": 43337079,
        "owner": "maticzav",
        "type": "Organization",
      },
    },
    "level": "info",
    "message": "Unconfigured label \\"label/siblings\\", skipping.",
  },
  Object {
    "event": Object {
      "action": "created",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "repository",
      "repo": Object {
        "name": "newrepo",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "New repository newrepo in maticzav.",
  },
  Object {
    "event": Object {
      "action": "created",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "repository",
      "repo": Object {
        "name": "newrepo",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "Performing sync on newrepo.",
  },
  Object {
    "event": Object {
      "action": "created",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "repository",
      "repo": Object {
        "name": "newrepo",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "Repository synced newrepo.",
  },
  Object {
    "event": Object {
      "action": "created",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "repository",
      "repo": Object {
        "name": "newrepo",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "New repository newrepo in maticzav.",
  },
  Object {
    "event": Object {
      "action": "created",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "repository",
      "repo": Object {
        "name": "newrepo",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "Performing sync on newrepo.",
  },
  Object {
    "event": Object {
      "action": "created",
      "context": Object {
        "user_id": 21031067,
      },
      "name": "repository",
      "repo": Object {
        "name": "newrepo",
      },
      "user": Object {
        "id": 21031067,
        "owner": "maticzav",
        "type": "User",
      },
    },
    "level": "info",
    "message": "Repository synced newrepo.",
  },
]
`;

exports[`github: paid plan installation event insufficient permissions 1`] = `
Object {
  "body": "# Insufficient permissions

Hi there,
Thank you for installing LabelSync. We have noticed that your configuration stretches beyond repositories we can access. We assume that you forgot to allow access to certain repositories.

Please update your installation. 

_Missing repositories:_
 * UNCHANGED

Best,
LabelSync Team",
  "title": "LabelSync - Insufficient permissions",
}
`;

exports[`github: paid plan installation invalid config issue 1`] = `
Object {
  "body": "# Welcome to LabelSync!

Hi there,
Thank you for using LabelSync. We hope you enjoyed the experience so far.
It seems like there are some problems with your configuration.
Our parser reported that:

 * \`repos\`: Required

Let us know if we can help you with the configuration by sending us an email to support@label-sync.com. We'll try to get back to you as quickly as possible.

Best,
LabelSync Team",
  "title": "LabelSync - Onboarding configuration",
}
`;

exports[`github: paid plan issues.labeled adds siblings 1`] = `Array []`;

exports[`github: paid plan pull_request 1`] = `
Object {
  "head_sha": "ec26c3e57ca3a959ca5aad62de7213c562f8c821",
  "name": "label-sync/dryrun",
  "status": "in_progress",
}
`;

exports[`github: paid plan pull_request 2`] = `
Object {
  "conclusion": "failure",
  "output": Object {
    "summary": "It seems like this configuration stretches beyond repositories we can access. Please update it so we can help you as best as we can.

_Missing repositories:_
 * UNCHANGED",
    "title": "Missing repository access.",
  },
  "status": "completed",
}
`;

exports[`github: paid plan pull_request with insufficient permissions 1`] = `
Object {
  "head_sha": "ec26c3e57ca3a959ca5aad62de7213c562f8c821",
  "name": "label-sync/dryrun",
  "status": "in_progress",
}
`;

exports[`github: paid plan pull_request with insufficient permissions 2`] = `
Object {
  "conclusion": "failure",
  "output": Object {
    "summary": "It seems like this configuration stretches beyond repositories we can access. Please update it so we can help you as best as we can.

_Missing repositories:_
 * UNCHANGED",
    "title": "Missing repository access.",
  },
  "status": "completed",
}
`;

exports[`github: paid plan pull_request.labeled adds siblings 1`] = `Array []`;

exports[`github: paid plan push event 1`] = `
Object {
  "body": "Your configuration stretches beyond repositories I can access. 
Please update it so I may sync your labels.

_Missing repositories:_
 * UNCHANGED",
}
`;

exports[`github: paid plan push event invalid configuration 1`] = `
Object {
  "body": "It seems like your configuration uses a format unknown to me. 
That might be a consequence of invalid yaml cofiguration file. 

Here's what I am having problems with:

 * \`repos\`: Required",
}
`;

exports[`github: paid plan push event with insufficient premissions 1`] = `
Object {
  "body": "Your configuration stretches beyond repositories I can access. 
Please update it so I may sync your labels.

_Missing repositories:_
 * UNCHANGED",
}
`;
